# cpp-project-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: main.cpp
